add expiration time to AuthObject
